'IE7 bug - not handling sidblocks correctly with long words. overflow and word-wrap corrects the sideblock width in most cases.'

--- a/theme/standard/styles_ie7.css
+++ b/theme/standard/styles_ie7.css
@@ -19,3 +19,11 @@
 .tabrow0 UL {
    top: 2.1em; 
 }
+
+.sideblock {
+    overflow: hidden;
+}
+
+.sideblock .content {
+    word-wrap: break-word;
+}
